--- a/css/about.css
+++ b/css/about.css
@@ -118,7 +118,122 @@ button:focus {
   border-bottom-right-radius: 5px;
 }
 
-/* Mobile */
-@media(max-width: 768px) {
+  /* Mobile */
+  @media screen and  (max-width: 768px){
+   .slider-container{
+     margin-top: 120px;
+   } 
+   
+    .left-slide h1{
+       margin-top: -550px; 
+       font-weight: 600;
+       font-size: 20px;
+       text-align: center;
+       margin-bottom: 100px;
+    }   
+
+    .left-slide .info p {
+        position: absolute;
+        margin-left: -105px;
+        padding-right: 15px;
+        margin-top: 150px;
+        width: 85%;
+        text-align: center;
+        font-weight: 500;
+    }
+    .slider-container .action-buttons button {
+      top: 35%;
+    }
+  }
+  
+  
+    @media screen and (min-width: 374px) and (max-width: 415px) {
+      .slider-container {
+         margin-top: 120px;
+      } 
+      
+      .slider-container .action-buttons button {
+        top: 40%;
+      }
+
+      .action-buttons .down-button {
+        margin-left: 15px;
+      }
+       .left-slide h1{
+          margin-top: -550px; 
+          font-weight: 600;
+          font-size: 20px;
+          text-align: center;
+          margin-bottom: 20px;
+       }   
     
-}
+       .left-slide .info p {
+           position: absolute;
+           margin-top: 50px;
+           margin-left: -55px;
+           padding-right: 15px;
+           width: 80%;
+           text-align: center;
+           font-weight: 500;
+       }
+   
+       .left-slide .info .special {
+           font-size: 16px;
+           font-weight: 400px;
+           margin-right: 15px;
+           margin-top: 145px;
+       }
+   
+       .left-slide .info #special {
+         font-size: 13px;
+         margin-right: 5px;
+         margin-left: -65px;
+       }
+    }
+
+     @media screen and (max-width: 415px) {
+      .slider-container {
+         margin-top: 120px;
+      } 
+      
+      .slider-container .action-buttons button {
+        top: 40%;
+      }
+
+      .action-buttons .down-button {
+        margin-left: 15px;
+      }
+       .left-slide h1{
+          margin-top: -550px; 
+          font-weight: 600;
+          font-size: 20px;
+          text-align: center;
+          margin-bottom: 20px;
+       }   
+    
+       .left-slide .info p {
+           position: absolute;
+           margin-top: 50px;
+           margin-left: -55px;
+           padding-right: 15px;
+           width: 80%;
+           text-align: center;
+           font-weight: 500;
+       }
+   
+       .left-slide .info .special {
+           font-size: 16px;
+           font-weight: 400px;
+           margin-right: 15px;
+           margin-top: 145px;
+       }
+   
+       .left-slide .info #special {
+         font-size: 13px;
+         margin-right: 5px;
+         margin-left: -65px;
+       }
+     }
+     
+      
+   
