--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,6 @@ a {
     text-decoration: none;
 }
 
-/* h1, h2 {
-    font-weight: 300;
-    line-height: 1.2;
-} */
-
 p {
     margin: 10px 0;
 }
@@ -47,7 +42,7 @@ p {
     height: 70px;
     position: fixed;
     top: 0px;
-    padding: 0 30px;
+    padding: 30px 30px;
     transition: 0.5s;
 }
 
@@ -57,7 +52,7 @@ p {
 
 .navbar a {
     color: red;
-    padding: 10px 20px;
+    padding: 0px 20px;
     margin: 0 5px;
     font-weight: 600;
 }
@@ -70,10 +65,6 @@ p {
 .navbar ul {
     display: flex;
 }
-/* 
-.navbar .logo {
-    font-weight: 600;
-} */
 
 .navbar .title {
     font-weight: 600;
@@ -99,10 +90,7 @@ p {
     background: url('../images/baseball.jpg') no-repeat center center/cover;
     height: 50vh;
 }
-/* .hero-merch {
-    background: url('../images/stadium3.jpg') no-repeat center center/cover;
-    height: 25vh;
-} */
+
 
 .hero .content {
     display: flex;
@@ -137,23 +125,12 @@ p {
     margin-top: 60px;
 }
 
-.hero .content .bball{
-     font-size: 30px;
-     padding-left: 2px;
-     padding-right: 5px;
-      
-}
 .hero .content .fball{
      font-size: 100px;
      padding-left: 2px;
      padding-right: 5px;
       
 }
-
-/* .hero span .ball {
-    display: flex;
-    margin-top: 150px;
-} */
 
 .hero::before {
     content: '';
@@ -173,11 +150,11 @@ p {
     height: 50px;
     width: 60px;
     display: flex;
-
 }
 
 .flex-container {
     display: flex;
+  
 }
 
 .heading h1 {
@@ -203,8 +180,6 @@ p {
     background: url('../images/basketball.jpg') no-repeat center center/cover;
     height: 300px;
 }
-
-
 
 .talk .box {
     float: left;
@@ -259,10 +234,7 @@ p {
 }
 
 .video {
-    /* background: black; */
     padding-bottom: 20px;
-    /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); */
-    width: 23; /* Thumbnails 4 across */
     height: 255px;
     margin: 1%;
     float: left;
@@ -274,11 +246,7 @@ p {
         text-align: center;
         width: 281px;
         margin-left: 20px;
-         
-         
-        /* padding-top: 5px; */
-        /* padding-bottom: 8px; */
-    }
+}
 
     /* Merch.html */
     .merch .emb {
@@ -286,7 +254,60 @@ p {
         width: 100%;
         height: 100vw;
     }
+/* Contact */
 
+
+.container2 {
+    margin-top: 100px;
+    margin-left: 120px;
+    margin-bottom: 80px;
+    color: red;
+}
+
+.container2 form {
+    float: left;
+}
+
+.container2 .contact-pic {
+    margin-left: 140px;
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    margin-top: 25px;
+}
+
+.container2 h1,
+.container2 label, 
+.container2 .btn {
+     
+    font-family: 'Bitter', sans-serif;;
+}
+
+form .label{
+    font-weight: bolder;
+}
+
+form input {
+    width: 100%;
+    height: 30px;
+    border: 2px solid;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+form textarea {
+    border: 2px solid;
+    border-radius: 5px;
+}
+
+form .btn {
+    background: black;
+    color: red;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+}
 
 /* Mobile */
 @media(max-width: 768px) {
@@ -327,5 +348,14 @@ p {
 
 .talk a{
     display: block;
+}
+
+.container2 {
+    margin-top: 150px;
+    margin-left: 20px;
+}
+
+form input {
+    width: 50%;
 }
 }
