--- a/css/about.css
+++ b/css/about.css
@@ -16,7 +16,7 @@ body {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  margin-top: 43px;
+  margin-top: 63px;
 }
 
 .left-slide {
@@ -71,18 +71,17 @@ body {
   width: 100%;
 }
 
-.right-slide .momanddad,
+  .right-slide .momanddad,
 .right-slide .brothersacting,  
 .right-slide .sexton { 
     background-position: center;
-}
+}  
 
-.maliqmask {
+ .maliqmask {
     background-position: right center;     
-}
+}  
  
-
-button {
+ button {
   background-color: #fff;
   border: none;
   color: #aaa;
@@ -147,7 +146,7 @@ button:focus {
   }
   
   
-    @media screen and (min-width: 374px) and (max-width: 415px) {
+    @media screen  and (min-width: 374px) and (max-width: 415px) {
       .slider-container {
          margin-top: 120px;
       } 
@@ -188,52 +187,32 @@ button:focus {
          font-size: 13px;
          margin-right: 5px;
          margin-left: -65px;
+       }
+
+       .right-slide .maliqabout{
+         background-size: 310px 700px;
+       }
+       
+       .right-slide .threebrothers,
+       .right-slide  .sexton {
+        background-size: 310px 690px;
+      }
+
+      .right-slide  .maliqmask {
+         background-size: 268px 700px;
+         background-position: top;
+       }
+
+       .right-slide .momanddad,
+       .right-slide .brothersacting {
+         background-size: 269px 690px;
+         background-position: top;
+       }
+
+       .right-slide  .sexton {
+         background-size: 268px 700px;
+         background-position: top;
        }
     }
 
-     @media screen and (max-width: 415px) {
-      .slider-container {
-         margin-top: 120px;
-      } 
-      
-      .slider-container .action-buttons button {
-        top: 40%;
-      }
-
-      .action-buttons .down-button {
-        margin-left: 15px;
-      }
-       .left-slide h1{
-          margin-top: -550px; 
-          font-weight: 600;
-          font-size: 20px;
-          text-align: center;
-          margin-bottom: 20px;
-       }   
-    
-       .left-slide .info p {
-           position: absolute;
-           margin-top: 50px;
-           margin-left: -55px;
-           padding-right: 15px;
-           width: 80%;
-           text-align: center;
-           font-weight: 500;
-       }
-   
-       .left-slide .info .special {
-           font-size: 16px;
-           font-weight: 400px;
-           margin-right: 15px;
-           margin-top: 145px;
-       }
-   
-       .left-slide .info #special {
-         font-size: 13px;
-         margin-right: 5px;
-         margin-left: -65px;
-       }
-     }
      
-      
-   
